--- a/app/src/main/res/layout/fragment_nav.xml
+++ b/app/src/main/res/layout/fragment_nav.xml
@@ -10,7 +10,7 @@
         android:layout_width="409dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/backgroundBlack">
+        android:background="@color/backgroundGrey">
 
         <Button
             android:id="@+id/weaponsB"
