--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,9 +17,10 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="50dp"
         android:ems="10"
-        android:fontFamily="@font/fs_sinclair_medium_italic"
+        android:fontFamily="@font/fs_sinclair_medium"
         android:hint="@string/search_for_a_weapon"
         android:inputType="text"
+        android:background="@color/backgroundGrey"
         android:textColor="@color/white"
         android:textColorHint="@color/lightgrey"
         android:textSize="20sp"
@@ -38,6 +39,8 @@
         android:id="@+id/weaponsLV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginBottom="60dp"
         android:groupIndicator="@drawable/custom_expandable"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,20 +50,22 @@
 
     <Button
         android:id="@+id/searchB"
-        android:layout_width="wrap_content"
-        android:layout_height="45dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="-4dp"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="-4dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/fs_sinclair_medium"
         android:text="@string/search"
         android:textColor="@color/backgroundBlack"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/searchET"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/searchET"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/searchET"
+        app:layout_constraintTop_toTopOf="@+id/searchET" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -74,67 +79,74 @@
             android:id="@+id/chipGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             app:chipSpacingHorizontal="0dp">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/offChip"
                 android:layout_width="wrap_content"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 app:chipCornerRadius="0dp"
                 android:checkable="true"
                 android:checked="true"
                 android:text="@string/offensive"
                 android:fontFamily="@font/fs_sinclair_medium"
                 android:textSize="12sp"
+                android:textAppearance="@style/ChipTextAppearance__Roboto"
                 android:textColor="@color/chip_text_color_selector_red"
                 app:chipBackgroundColor="@color/chip_color_selector_red" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/defChip"
                 android:layout_width="wrap_content"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 app:chipCornerRadius="0dp"
                 android:checkable="true"
                 android:checked="true"
                 android:text="@string/defensive"
                 android:fontFamily="@font/fs_sinclair_medium"
                 android:textSize="12sp"
+                android:textAppearance="@style/ChipTextAppearance__Roboto"
+
                 android:textColor="@color/chip_text_color_selector_blue"
                 app:chipBackgroundColor="@color/chip_color_selector_blue" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/supChip"
                 android:layout_width="wrap_content"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 app:chipCornerRadius="0dp"
                 android:checkable="true"
                 android:checked="true"
                 android:text="@string/supply"
                 android:textSize="12sp"
+                android:textAppearance="@style/ChipTextAppearance__Roboto"
                 android:textColor="@color/chip_text_color_selector_green"
                 app:chipBackgroundColor="@color/chip_color_selector_green" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/misChip"
                 android:layout_width="wrap_content"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 app:chipCornerRadius="0dp"
                 android:checkable="true"
                 android:checked="true"
                 android:text="@string/mission"
                 android:textSize="12sp"
+                android:textAppearance="@style/ChipTextAppearance__Roboto"
                 android:textColor="@color/chip_text_color_selector_yellow"
                 app:chipBackgroundColor="@color/chip_color_selector_yellow" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/speChip"
                 android:layout_width="wrap_content"
-                android:layout_height="45dp"
+                android:layout_height="40dp"
                 app:chipCornerRadius="0dp"
                 android:checkable="true"
                 android:checked="true"
                 android:text="@string/special"
                 android:textSize="12sp"
+                android:textAppearance="@style/ChipTextAppearance__Roboto"
                 android:textColor="@color/chip_text_color_selector_grey"
                 app:chipBackgroundColor="@color/chip_color_selector_grey" />
 
