--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -5,17 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondActivity"
+    tools:context=".FourthActivity"
     android:background="@color/backgroundBlack"
     android:backgroundTint="@color/backgroundBlack">
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/navFragment"
-        android:name="com.example.mobileproject.NavFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/header"
@@ -35,7 +27,7 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -50,7 +42,7 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -64,7 +56,7 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -78,7 +70,7 @@
     <TextView
         android:id="@+id/textView5"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -92,7 +84,7 @@
     <TextView
         android:id="@+id/textView6"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -106,7 +98,7 @@
     <TextView
         android:id="@+id/textView7"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -120,7 +112,7 @@
     <TextView
         android:id="@+id/textView8"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -134,7 +126,7 @@
     <TextView
         android:id="@+id/textView10"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -148,21 +140,22 @@
     <TextView
         android:id="@+id/textView11"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
+        android:layout_marginBottom="11dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/revives"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView14"
+        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView12"
         android:layout_width="156dp"
-        android:layout_height="43dp"
+        android:layout_height="48dp"
         android:layout_marginStart="31dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -173,246 +166,221 @@
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="156dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="31dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/backgroundGrey"
-        android:backgroundTint="@color/backgroundGrey"
-        android:text="@string/success_rate"
-        android:textAlignment="center"
-        android:textAppearance="@style/ChipTextAppearance__Roboto"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/updateButton"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="156dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="31dp"
-        android:background="@color/backgroundGrey"
-        android:backgroundTint="@color/backgroundGrey"
-        android:text="@string/accuracy"
-        android:textAlignment="center"
-        android:textAppearance="@style/ChipTextAppearance__Roboto"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/textView13"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/wins"
+    <EditText
+        android:id="@+id/typeWins"
         android:layout_width="184dp"
-        android:layout_height="44dp"
+        android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/typePlays"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/header" />
 
-    <TextView
-        android:id="@+id/plays"
+
+    <EditText
+        android:id="@+id/typePlays"
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/typeBugs"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/wins" />
+        app:layout_constraintTop_toBottomOf="@+id/typeWins" />
 
-    <TextView
-        android:id="@+id/bugKills"
+    <EditText
+        android:id="@+id/typeBugs"
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/typeAutomations"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/plays" />
+        app:layout_constraintTop_toBottomOf="@+id/typePlays" />
 
-    <TextView
-        android:id="@+id/automationKills"
+    <EditText
+        android:id="@+id/typeAutomations"
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/typeIlluminates"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/bugKills" />
+        app:layout_constraintTop_toBottomOf="@+id/typeBugs" />
 
-    <TextView
-        android:id="@+id/illuminateKills"
+    <EditText
+        android:id="@+id/typeIlluminates"
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/typeFriendly"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/automationKills" />
+        app:layout_constraintTop_toBottomOf="@+id/typeAutomations" />
 
-    <TextView
-        android:id="@+id/friendlyKills"
+    <EditText
+        android:id="@+id/typeFriendly"
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/typeFires"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/illuminateKills" />
+        app:layout_constraintTop_toBottomOf="@+id/typeIlluminates" />
 
-    <TextView
-        android:id="@+id/bulletsFired"
+    <EditText
+        android:id="@+id/typeFires"
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/typeHits"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/friendlyKills" />
+        app:layout_constraintTop_toBottomOf="@+id/typeFriendly" />
 
-    <TextView
-        android:id="@+id/bulletsHit"
+    <EditText
+        android:id="@+id/typeHits"
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/typeDeaths"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/bulletsFired" />
+        app:layout_constraintTop_toBottomOf="@+id/typeFires" />
 
-    <TextView
-        android:id="@+id/deaths"
+    <EditText
+        android:id="@+id/typeDeaths"
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/typeRevives"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView10"
-        app:layout_constraintTop_toBottomOf="@+id/bulletsHit" />
+        app:layout_constraintTop_toBottomOf="@+id/typeHits" />
 
-    <TextView
-        android:id="@+id/revives"
+    <EditText
+        android:id="@+id/typeRevives"
         android:layout_width="184dp"
         android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="9dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
+        android:inputType="number"
         android:text="@string/placeholder2"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/saveButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/deaths" />
-
-    <TextView
-        android:id="@+id/accuracy"
-        android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="32dp"
-        android:background="@color/backgroundGrey"
-        android:backgroundTint="@color/backgroundGrey"
-        android:text="@string/placeholder2"
-        android:textAlignment="center"
-        android:textAppearance="@style/ChipTextAppearance__Roboto"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/revives" />
-
-    <TextView
-        android:id="@+id/missionSuccessRate"
-        android:layout_width="184dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/backgroundGrey"
-        android:backgroundTint="@color/backgroundGrey"
-        android:text="@string/placeholder2"
-        android:textAlignment="center"
-        android:textAppearance="@style/ChipTextAppearance__Roboto"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/updateButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView13"
-        app:layout_constraintTop_toBottomOf="@+id/accuracy" />
+        app:layout_constraintTop_toBottomOf="@+id/typeDeaths" />
 
     <Button
-        android:id="@+id/updateButton"
-        android:layout_width="150dp"
+        android:id="@+id/saveButton"
+        android:layout_width="184dp"
         android:layout_height="50dp"
-        android:layout_marginStart="130dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginBottom="93dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="177dp"
         android:backgroundTint="@color/white"
         android:fontFamily="@font/fs_sinclair_medium"
-        android:text="@string/update"
+        android:text="@string/Save"
         android:textColor="@color/backgroundBlack"
         android:textSize="20sp"
         android:textStyle="bold"
         app:cornerRadius="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/cancelButton" />
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="156dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="31dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="177dp"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/fs_sinclair_medium"
+        android:text="@string/cancel"
+        android:textColor="@color/backgroundBlack"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:cornerRadius="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/saveButton"
         app:layout_constraintStart_toStartOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
