--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -13,7 +13,9 @@
         android:id="@+id/navFragment"
         android:name="com.example.mobileproject.NavFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/header"
@@ -35,7 +37,7 @@
         android:layout_width="156dp"
         android:layout_height="43dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="84dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
         android:text="@string/wins"
@@ -109,7 +111,7 @@
         android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
-        android:text="@string/fired"
+        android:text="@string/friendly_kills"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
@@ -123,7 +125,7 @@
         android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
-        android:text="@string/hits"
+        android:text="@string/fired"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
@@ -137,7 +139,7 @@
         android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
-        android:text="@string/deaths"
+        android:text="@string/hits"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
@@ -151,7 +153,7 @@
         android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
-        android:text="@string/revives"
+        android:text="@string/deaths"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
@@ -165,12 +167,12 @@
         android:layout_marginStart="16dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
-        android:text="@string/friendly_kills"
+        android:text="@string/revives"
         android:textAlignment="center"
         android:textAppearance="@style/ChipTextAppearance__Roboto"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="459dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
         android:id="@+id/textView13"
@@ -205,7 +207,7 @@
         android:id="@+id/wins"
         android:layout_width="184dp"
         android:layout_height="44dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="84dp"
         android:layout_marginEnd="15dp"
         android:background="@color/backgroundGrey"
         android:backgroundTint="@color/backgroundGrey"
@@ -386,7 +388,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.878" />
+        app:layout_constraintVertical_bias="0.898" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
