--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -41,8 +41,8 @@
 
     <TextView
         android:id="@+id/propaganda"
-        android:layout_width="399dp"
-        android:layout_height="21dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="34dp"
         android:fontFamily="@font/fs_sinclair_medium_italic"
         android:text="@string/placeholder"
